--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -3,7 +3,7 @@
   <head>
     <title>Reading List</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
-    <script src="/assets/js/app.js"></script>
+    <script src="/public/app.js"></script>
   </head>
   <body>
     <h1><a href="/">Books I read...</a></h1>
