--- a/views/reads-index.hbs
+++ b/views/reads-index.hbs
@@ -1,11 +1,11 @@
 <h2>{{read.length}} reads</h2>
 {{#each reads as |read index|}}
 <h3>
-  <a href="/reads/{{read.title}}">{{read.title}} by {{read.author}}</a>
+  <a href="/read/{{read.title}}">{{read.title}} by {{read.author}}</a>
 </h3>
 {{/each}}
 <h2> Register New List</h2>
-<form action = "/reads " mothod = "post">
+<form action = "/reads " mothode = "post">
 <input type="text" name="read[title]" placeholder="title"/>
 <input type="text" name="read[author]" placeholder="author"/>
 <button type="submit">Add read</button>
