--- a/views/reads.hbs
+++ b/views/reads.hbs
@@ -3,6 +3,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
 <script src="/assets/js/app.js"></script>
 
-<div data-ng-app="readinglist">
+<div data-ng-app="readinglists">
   <main data-ui-view></main>
 </div>
