--- a/views/reads-index.hbs
+++ b/views/reads-index.hbs
@@ -1,7 +1,7 @@
 <h2>{{read.length}} reads</h2>
 {{#each reads as |read index|}}
 <h3>
-  <a href="/read/{{read.title}}">{{read.title}} by {{read.author}}</a>
+  <a href="/reads/{{read.title}}">{{read.title}} by {{read.author}}</a>
 </h3>
 {{/each}}
 <h2> Register New List</h2>
